@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.16 2004/04/18 19:45:11 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2004/04/30 15:11:28 reed Exp $
 #
 
 DISTNAME=	groff-1.19
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GNU:=groff/}
 
@@ -20,15 +20,25 @@ USE_BUILDLINK3=		YES
 
 INFO_FILES=	groff
 
-post-install:
-	${INSTALL_DATA} ${FILESDIR}/mdoc.local \
-		${PREFIX}/share/groff/site-tmac
-
 .include "../../mk/bsd.prefs.mk"
 
 .ifdef PAPERSIZE
 CONFIGURE_ENV+=	PAGE=${PAPERSIZE}
 .endif
+
+# Usually the mdoc.local "volume-operating-system" definition is for
+# the operating system name often displayed on top of man pages. And
+# "operating-system" is for the default .Os value (operating system
+# and version/release) and is usually displayed at bottom of man page.
+# XXX Use "pkgsrc" as default .Os value.
+post-patch:
+	${SED}	-e "s,@@VOLUME_OPERATING_SYSTEM@@,${OPSYS},g"	\
+		-e "s,@@OPERATING_SYSTEM@@,pkgsrc,g"	\
+		${FILESDIR}/mdoc.local > ${WRKDIR}/mdoc.local
+
+post-install:
+	${INSTALL_DATA} ${WRKDIR}/mdoc.local \
+		${PREFIX}/share/groff/site-tmac
 
 .include "../../mk/ghostscript.mk"
 .include "../../mk/bsd.pkg.mk"
